# pycdt

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  ci_checks.yml
examples/: circle.py  circles.py  concave_polygon.py  concentric_circles.py  cyl_face.py  grid_diagonal_constraint.py  intersecting_edges.py  plane_face.py  plane_face_2.py  points_on_edge.py  polygon_boundary_constraint.py  toroidal_face.py
pycdt/: aabb.py  add_contraints.py  build.py  constrained.py  debug_utils.py  delaunay.py  geometry.py  query.py  topology.py  utils.py
src/: add_contraints.py  build.py  delaunay.py  topology.py
tests/: test_cdt.py  test_constrained.py  test_finalization.py  test_incremental.py  test_query.py  test_swap_diagonal.py
